--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!doctype html>
+<html>
 <head>
 <title>New World</title>
 </head>
 
 <body>
+  <nav>
+    <a href="/index.html">Home</a>
+    <a href="/diary.html">Diary</a>
+    <a href="/qna.html">QnA</a>
+  </nav>
 <h1>Hello This is J</h1>
 <h2>This is J</h2>
 <h3>This is J</h3>
