--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+  <html lang="ko">
 <head>
 <title>New World</title>
 </head>
@@ -10,11 +11,11 @@
     <a href="/diary.html">Diary</a>
     <a href="/qna.html">QnA</a>
   </nav>
-<h1>Hello This is J</h1>
-<h2>This is J</h2>
-<h3>This is J</h3>
-<h4>This is J</h4>
-<h5>This is J</h5>
-<h6>This is J</h6>
+<h1>여기는 제이의 일기장</h1>
+<h2>여기는 제이의 일기장</h2>
+<h3>여기는 제이의 일기장</h3>
+<h4>여기는 제이의 일기장</h4>
+<h5>여기는 제이의 일기장</h5>
+<h6>여기는 제이의 일기장</h6>
 </body>
 </html>
