--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 
 <body>
   <nav>
-    <a href="/index.html">Home</a>
-    <a href="/diary.html">Diary</a>
-    <a href="/qna.html">QnA</a>
+    <a href="index.html">Home</a>
+    <a href="diary.html">Diary</a>
+    <a href="qna.html">QnA</a>
   </nav>
 <h1>여기는 제이의 일기장</h1>
 <h2>여기는 제이의 일기장</h2>
